@startuml

title __ITEMS's Class Diagram__\n

  namespace tilegame {
    namespace items {
      class tilegame.items.Item {
          {static} + ITMHeight : int
          {static} + ITMWidth : int
          {static} + haleala : Item
          {static} + itmes : Item[]
          {static} + superpower : Item
          # bounds : Rectangle
          # count : int
          # id : int
          # name : String
          # pickup : boolean
          # texture : BufferedImage
          # x : int
          # y : int
          + Item()
          + createNew()
          + createNew()
          + getCount()
          + getHandler()
          + getId()
          + getName()
          + getTexture()
          + getX()
          + getY()
          + isPickup()
          + render()
          + render()
          + setCount()
          + setHandler()
          + setName()
          + setPickup()
          + setPositon()
          + setTexture()
          + setX()
          + setY()
          + tick()
      }
    }
  }
  

  namespace tilegame {
    namespace items {
      class tilegame.items.ItemManager {
          - items : ArrayList<Item>
          + ItemManager()
          + addItem()
          + getHandler()
          + render()
          + setHandler()
          + tick()
      }
    }
  }
  

  tilegame.items.Item o-- tilegame.Handler : handler
  tilegame.items.ItemManager o-- tilegame.Handler : handler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
